# himadri

./: .agents  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTHORIZATION_STANDARDIZATION.md  CHANGELOG.md  CODE_REVIEW.md  CONTEXT.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  auth-requirements.md  claude-incomplete.md  docker-compose.yml  load_test.sh  load_test_sink.rs  rust-review.md
.github/workflows/: ci.yml
crates/himadri/: Cargo.toml
crates/himadri-admin/: Cargo.toml
crates/himadri-admin/migrations/: 001_init.sql
crates/himadri-admin/migrations/postgres/: 001_initial.sql  002_providers_models.sql  003_model_weight.sql  004_model_endpoints.sql
crates/himadri-admin/migrations/sqlite/: 001_initial.sql  002_providers_models.sql  003_model_weight.sql  004_model_endpoints.sql
crates/himadri-admin/src/: config_store.rs  crypto.rs  error.rs  handlers.rs  lib.rs  middleware.rs  model_store.rs  models.rs  postgres_backends.rs  postgres_provider_store.rs  postgres_store.rs  provider_backend.rs  provider_store.rs  request_log.rs  sqlite_time.rs  store.rs  store_parity_tests.rs  tests.rs  usage_store.rs
crates/himadri-auth/: Cargo.toml
crates/himadri-auth/src/: admin_login.rs  config.rs  error.rs  introspect.rs  jwt.rs  lib.rs  middleware.rs  oauth2_client.rs  oidc.rs  zitadel.rs
crates/himadri-auth/tests/: jwt_validation.rs  test_rsa.pem
crates/himadri-circuitbreaker/: Cargo.toml
crates/himadri-circuitbreaker/src/: lib.rs
crates/himadri-core/: Cargo.toml
crates/himadri-core/src/: config.rs  env.rs  error.rs  lib.rs  net_guard.rs  provider_registry.rs  rbac.rs  roles.rs  scope.rs  types.rs
crates/himadri-observability/: Cargo.toml
crates/himadri-observability/src/: audit.rs  lib.rs  metrics.rs  redact.rs  tracing_setup.rs
crates/himadri-plugin/: Cargo.toml
crates/himadri-plugin/src/: context.rs  lib.rs  manager.rs  registry.rs  traits.rs
crates/himadri-plugins/: Cargo.toml
crates/himadri-plugins/src/: budget.rs  cache.rs  lib.rs  logger.rs  max_token.rs  pii_engine.rs  pii_guardrail.rs  rate_limit.rs  word_filter.rs
crates/himadri-provider/: Cargo.toml
crates/himadri-provider/src/: error.rs  http_client.rs  lib.rs  registry.rs  sse.rs  tests.rs  traits.rs  types.rs
crates/himadri-provider/src/anthropic/: mod.rs  provider.rs
crates/himadri-provider/src/azure/: mod.rs  provider.rs
crates/himadri-provider/src/bedrock/: mod.rs  provider.rs
crates/himadri-provider/src/compatible/: mod.rs  provider.rs
crates/himadri-provider/src/gemini/: mod.rs  provider.rs
crates/himadri-provider/src/openai/: mod.rs  provider.rs
crates/himadri-provider/src/openrouter/: mod.rs  provider.rs
crates/himadri-provider/tests/: openrouter_live.rs
crates/himadri-ratelimit/: Cargo.toml
crates/himadri-ratelimit/src/: lib.rs  redis_store.rs  token_bucket.rs
crates/himadri/benches/: gateway_bench.rs  guardrails_bench.rs
crates/himadri/src/: combined_auth.rs  gateway.rs  handlers.rs  latency_store.rs  lib.rs  main.rs  model_index.rs  strategy.rs  strategy_tests.rs
crates/himadri/src/gateway/: audit.rs  config.rs  mod.rs  policy.rs  providers.rs  proxy.rs  rebuild.rs  route.rs  stream.rs
crates/himadri/src/wire/: mod.rs  mode.rs  plugins.rs  providers.rs
crates/himadri/tests/: e2e_tests.rs  feature_tests.rs  guardrails_e2e_tests.rs  mock_provider.rs  usecase_e2e_tests.rs
crates/load-test-sink/: Cargo.toml
crates/load-test-sink/src/: main.rs
deploy/: README.md
deploy/auth0/: setup.sh
deploy/auth0/terraform/: main.tf
deploy/ecs/: auto-scaling.json  service.json  task-definition.json
deploy/entra/: setup.ps1
deploy/entra/bicep/: main.bicep
deploy/entra/terraform/: main.tf
deploy/keycloak/: realm-export.json  setup.sh
deploy/okta/: setup.sh
deploy/okta/terraform/: main.tf
deploy/ping/: setup.sh
deploy/zitadel/: setup.sh
deploy/zitadel/terraform/: main.tf
docs/: CODE_REVIEW_2026-07-10.md  E2E.md  FEATURE_PARITY.md  GAP_ANALYSIS.md  README.md  REFACTORING.md  SPEC_GUARDRAILS.md  SPEC_GUARDRAILS_V2.md  config-standard-roles.json  configuration.md  database.md  opentelemetry.md  roles.md  zitadel.md
docs/compose/plans/: 2026-06-29-dynamic-models-and-proxy.md
scripts/: zitadel_onboard.sh
tests/: e2e_test.sh
web/: components.json  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/dashboard/: page.tsx
web/app/dashboard/config/: page.tsx
web/app/dashboard/keys/: page.tsx
web/app/dashboard/logs/: page.tsx
web/app/dashboard/models/: page.tsx
web/app/dashboard/playground/: page.tsx
web/app/dashboard/usage/: page.tsx
web/components/: app-sidebar.tsx  auth-guard.tsx  login-form.tsx  nav-main.tsx  nav-projects.tsx  nav-settings.tsx  theme-provider.tsx
web/components/ui/: select.tsx
web/lib/: api.ts
