[workspace]
members = [
    "crates/himadri-core",
    "crates/himadri-provider",
    "crates/himadri-plugin",
    "crates/himadri-plugins",
    "crates/himadri-admin",
    "crates/himadri-observability",
    "crates/himadri-ratelimit",
    "crates/himadri-circuitbreaker",
    "crates/himadri",
    "crates/load-test-sink",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
rand = "0.8"
ahash = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
moka = { version = "0.12", features = ["future"] }
governor = "0.8"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
prometheus = "0.13"
clap = { version = "4", features = ["derive"] }

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Additional dependencies
regex = "1"
wiremock = "0.6"
