[workspace]
members = [
    "crates/himadri-core",
    "crates/himadri-provider",
    "crates/himadri-plugin",
    "crates/himadri-plugins",
    "crates/himadri-admin",
    "crates/himadri-auth",
    "crates/himadri-observability",
    "crates/himadri-ratelimit",
    "crates/himadri-circuitbreaker",
    "crates/himadri",
    "crates/load-test-sink",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry (traces only). Pinned to one coherent 0.32 release train;
# tracing-opentelemetry 0.33 targets the opentelemetry 0.32 API. TLS is
# rustls-only (see opentelemetry-otlp features) to match the openssl-free tree.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "grpc-tonic",
    "tls-roots",
] }
tracing-opentelemetry = "0.33"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
rand = "0.8"
ahash = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
moka = { version = "0.12", features = ["future"] }
governor = "0.8"
prometheus = "0.13"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Additional dependencies
regex = "1"
wiremock = "0.6"
aes-gcm = "0.10"
base64 = "0.22"
