[package]
name = "himadri-circuitbreaker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
redis = ["dep:redis"]
