[package]
name = "himadri-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
himadri-core = { path = "../himadri-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
regex = "1"
