[package]
name = "himadri-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
himadri-core = { path = "../himadri-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
regex = "1"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
# In-memory span exporter for hermetic trace-capture tests (no live collector).
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
