[package]
name = "himadri-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
himadri-core = { path = "../himadri-core" }
himadri-plugin = { path = "../himadri-plugin" }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
once_cell = "1"
ahash = { workspace = true }
rand = { workspace = true }
