[package]
name = "himadri-plugins"
version = "0.1.0"
edition = "2021"

[features]
default = ["guardrails"]
# PII detection/redaction guardrails (pulls in the redact-core engine).
guardrails = ["dep:redact-core"]

[dependencies]
himadri-core = { path = "../himadri-core" }
himadri-plugin = { path = "../himadri-plugin" }
himadri-observability = { path = "../himadri-observability" }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
once_cell = "1"
ahash = { workspace = true }
rand = { workspace = true }
# Pinned exactly: pre-1.0 crate, upgrades are deliberate (see docs/SPEC_GUARDRAILS.md §4).
redact-core = { version = "=0.8.3", optional = true }
