[package]
name = "himadri-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
himadri-core = { path = "../himadri-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
once_cell = "1"
async-stream = "0.3"
