[package]
name = "himadri-ratelimit"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
uuid = { workspace = true }

[features]
default = []
redis = ["dep:redis"]
